# realsense_kuka

./: LICENSE  README.md
Linux Computer/: 3D_Reconstruction.py
Linux Computer/cam_kuka/: CMakeLists.txt  package.xml
Linux Computer/cam_kuka/src/: image_sender.py  real_pointcloud.py  tcpListener_pointcloud.py
Linux Computer/cam_kuka/src/diagram/: diagram_image.py  diagram_pointcloud.py
Windows Computer/: parcours_img.java  receive_image.java  receiver_sender.java
